*Empty MediaWiki Message*

--- a/Wax_soo_saarka_gudaha.mw
+++ b/Wax_soo_saarka_gudaha.mw
@@ -3,7 +3,7 @@
 [[File:GDP per capita (nominal) 2015.png|thumb|right|250px|Dalalka hadba Wadarta guud ee wax soo saarka gudaha (iska magacaaban) ee sanaddii 2015 hadba qofkii<ref>Based on the IMF data. If no data was available for a country from IMF, I used WorldBank data.</ref>
 {|width="100%"
 |-
-| valign=top | {{Legend|#fea933|$2,000–4,000}} {{Legend|#fed24c|$1,000–2,000}} {{Legend|#feff33|$500–1,000}} {{Legend|ffffa6|below $500}} {{Legend|white|unavailable}}
+| valign=top | {{Legend|#fea933|$2,000–4,000}}Somalia {{Legend|#fed24c|$1,000–2,000}} {{Legend|#feff33|$500–1,000}} {{Legend|ffffa6|below $500}} {{Legend|white|unavailable}}
 |}Wadarta guud ee wax soo saarka qaranka (GNP) wuu ka duwanyahay ax soo saarka gudaha (GDP) Maxaa yeelay waxaa la tixgalinayaa badeecada lagu soo saaray dalal kale.
 ]]
 
