*Empty MediaWiki Message*

--- a/Józsefváros.mw
+++ b/Józsefváros.mw
@@ -14,4 +14,4 @@ Image:Rezsotercivertanlegi.jpg|Rezső square
 
 
 
-Józsefváros (Jarmal: Josefstadt) waa degmada 8aad ee Budapest, Hungary. Waa qayb ka mid ah bartamaha magaalada dareenka ballaaran sida mid ka mid ah xaafadaha qarniyadii 18aad ee u dhawaa Belváros.
+Józsefváros (Jarmal: Josefstadt) waa degmada 8aad ee [[Budapest]], [[Hungary]]. Waa qayb ka mid ah bartamaha magaalada dareenka ballaaran sida mid ka mid ah xaafadaha qarniyadii 18aad ee u dhawaa Belváros.
