*Empty MediaWiki Message*

--- a/Kispest.mw
+++ b/Kispest.mw
@@ -1,4 +1,4 @@
-Kispest (laydhka Little Pest) waa degmada 19aad ee XIX ee Budapest, Hungary. Waxay ku taala koonfur-bari ee magaalada Pest ee taariikhiga ah. Waxaa la aasaasay 1871 tuulo miyiga oo ah tuulo yar oo ku taal xadka magaalada Budapest, sidaas darteed waxaa loo yaqaan Kispest (Little Pest). Laga soo bilaabo 1880 illaa 1990kii dadweynaha Kispest ayaa kordhay min 1820 ilaa 72,838. [4] Kispest wuxuu noqday qayb ka mid ah Magaalooyinka Greater Budapest sannadkii 1950. Qeyb wayn oo loo yaqaan Kispesti lakótelep (Kispest microdistrict) ayaa la dhisay sannadkii 1980-meeyadii (12,100 guryo, 33,000 oo qof), taasoo ah lixda ugu wayn ee hantida maguurtada ah ee ku yaal Budapest. Degmadu waxay u adeegtaa Metro 3 (Kőbánya-Kispest iyo Hat Station), sidaas darteed xiriirka degaanka Downtown waa deg deg. Xarunta Metro ee Kispest waa seddexaad ee ugu mashquulsan magaalada (ka dib markii Deak Square iyo Örs vezér tere) ayadoo lagu qiyaasay 40,000 rakaab ah oo isticmaalaya (marar laba jeer) maalin shaqo caadi ah.
+Kispest (laydhka Little Pest) waa degmada 19aad ee XIX ee [[Budapest]], [[Hungary]]. Waxay ku taala koonfur-bari ee magaalada Pest ee taariikhiga ah. Waxaa la aasaasay 1871 tuulo miyiga oo ah tuulo yar oo ku taal xadka magaalada Budapest, sidaas darteed waxaa loo yaqaan Kispest (Little Pest). Laga soo bilaabo 1880 illaa 1990kii dadweynaha Kispest ayaa kordhay min 1820 ilaa 72,838. [4] Kispest wuxuu noqday qayb ka mid ah Magaalooyinka Greater Budapest sannadkii 1950. Qeyb wayn oo loo yaqaan Kispesti lakótelep (Kispest microdistrict) ayaa la dhisay sannadkii 1980-meeyadii (12,100 guryo, 33,000 oo qof), taasoo ah lixda ugu wayn ee hantida maguurtada ah ee ku yaal Budapest. Degmadu waxay u adeegtaa Metro 3 (Kőbánya-Kispest iyo Hat Station), sidaas darteed xiriirka degaanka Downtown waa deg deg. Xarunta Metro ee Kispest waa seddexaad ee ugu mashquulsan magaalada (ka dib markii Deak Square iyo Örs vezér tere) ayadoo lagu qiyaasay 40,000 rakaab ah oo isticmaalaya (marar laba jeer) maalin shaqo caadi ah.
 
 Ferenc Puskás ayaa ciyaaray kubadda cagta ee Kispest F.C. (ka dibna loo yaqaan Kispest Honvéd FC) 1950s.
 
