/* Jaamacadaha iyo iskulad ka Degmada ku yaal */His schools and universities

--- a/Dayniile.mw
+++ b/Dayniile.mw
@@ -151,5 +151,6 @@ Deegaanka Dayniile waxaa soo xukumay hogaamiyayaal hal adag,kana soo badbaadiyay
 Deegaanka Dayniile waxaa soo xukumay hogaamiyayaal hal adag,kana soo badbaadiyay deegaankaas xaaladihii adkaa ee soo maray sida Xukunkii Ujuuraan iyo gaaladii wadanka ku soo duushay.
 
 ==Jaamacadaha iyo iskulad ka Degmada ku yaal==
+1: Dugeiga Hoose Dhexe Iyo Sare Ee SYL
 
 {{Degmooyinka Gobolka Banaadir}}
