--- a/Shirkad_Enel.mw
+++ b/Shirkad_Enel.mw
@@ -1,5 +1,5 @@
 
-[[File:Enel logo 2016.png|600px|thumb|Enel`s new logo presented 26 January 2016]]
+[[File:Enel Group logo.svg|600px|thumb|Enel`s new logo presented 26 January 2016]]
 [[File:Enel logo 1963.png|thumb|Enel logo (1963–1982)]]
 [[File:Enel world production sites.JPG|thumb|upright=2.5|Enel's presence worldwide]]
 
