*Empty MediaWiki Message*

--- a/Al-Shabaab.mw
+++ b/Al-Shabaab.mw
@@ -4,7 +4,7 @@
 
 Calaamadaha shaqsiga ee jaaliyaasha Shabaab waxaa ka mid ah kuwa riyaaq ku arka shacabka Carabta. Waa na jabhad ee diidsan sahlidda qaranka, xasiloon, amni, cowlinimada iyo waxyaabaha aadanaha fitrah u ah.
 
-[[Tobanguur]]ka horeyd, jaaliyaasha al-Shabaab wuxuu ka yimaada kurayaasha oo khibrad ku leh qiiro [[niyadjabka]] (depression), dallacsiinta qiiraha [[xanaaq]] (promotion of anger), khalkhal (disorder), shucuur-la'aan (without sensibility) ama cunsuriyadda (racism) ama [[xidido|xididada]] go'aamada iyo dooqyada fudud leh sida [[caleen|caleemaha]] iyo qaarkood loo ururiyay ikhtiyaar-la'aan (dooqyad la'aan), ama balanqaad qanci-gelin oo been ah ama fursad la'aanta, ama dhaxalka (inheritance) ka soo jeeda dagaalka sokeeya Soomaaliyeed. 
+[[Tobanguur]]ka horeyd, jaaliyaasha al-Shabaab wuxuu ka yimaada kurayaasha oo khibrad ku leh qiiro [[niyadjabka]] (depression), dallacsiinta qiiraha [[xanaaq]] (promotion of anger), khalkhal (disorder), shucuur-la'aan (without sensibility) ama cunsuriyadda (racism) ama [[xidido|xididada]] go'aamada iyo dooqyada fudud leh sida [[caleen|caleemaha]] iyo qaarkood loo ururiyay ikhtiyaar-la'aan (dooqyad la'aan), ama balanqaad qanci-gelin oo been ah ama fursad la'aanta, ama dhaxalka (heritage) ka soo jeeda dagaalka sokeeya Soomaaliyeed. Qaarkood waxaa la barin qiimaha sooyaalnimo (individuality).
 
 Calaamadaha na tusayso Shabaab iney 2010kii marxaladeeda iyo tamarteeda ugu sahlida badnayd waa caasimada ayey qabsatay. Marxaladaha al-Shabaab ee 2010kii, markay amar-marintood karti iyo sahli lahayd, aad baa sharci-good la dhaliili jirey iyo anshax-kood (their discipline) la cambaareeyn jirey. 
 
