*Empty MediaWiki Message*

--- a/Wacbuudhan_Abgaal.mw
+++ b/Wacbuudhan_Abgaal.mw
@@ -99,6 +99,7 @@ AQOON YAHAANADA:
 *Mr. Yasin Ahmed Osman Aqoon yahaan bartay Sharciga iyo Siyaasadda.
 Gudoomiyaha hey,adda Maxaliga ah ee ACORDO
 *Aqoon yahaan Mohamed muhyadiin hassan abdi
+*Prof maxamed cosoble maxamuud
 
 Iyo kuwo kale aan halkaan kusoo koobi karin.
 
