*Empty MediaWiki Message*

--- a/Biyo_kulule.mw
+++ b/Biyo_kulule.mw
@@ -1,6 +1,6 @@
 {{Infobox port
 | name = Biyo kulule
-| image =
+| image =[[File:Biyo kulule image.jpg|thumb|Sawir Biyo kulule]]
 
 | imagesize = 250
 
@@ -43,6 +43,7 @@
 }}
 '''Biyo kulule''' waa xarun ku taalo bariga magaalada [[Boosaaso]]<ref>{{Cite web|url= https://puntlandpost.net/2016/01/16/dal-xiisayaal-ku-qul-qulaya-xarunta-biyo-kulule-ee-bosaso| title = Biyo kulule xigasho puntlandpost</ref> waxay qayb balaaran oo dhuleed ku leedahay dhulka ay magaalada Boosaaso ku fadhido<ref>http://allsanaag.com/sayidka-iyo-ceelka-biyo-kulule/</ref>. Biyo kulule waa deegaan aad u balaaran oo leh qaybo deegaan oo kala duwan oo ay kamid yihiin Beero, Xijjiyo, Dhuldaaqsimeed, Dhulal furan oo qaybtood ay degan yihiin sharaa'ik ganacsi, Iyo dhulka magaalada boosaaso ku fadhido qaybtiis, Deegaanku wuxu kamid yahay deegaanada magaalada boosaaso ay aadka ugu fidi doonto, Kaydadka dhuleed ee ugu balaaran ee boosaaso mustaqbalka haysato waxay ku yaalaan deegaankan.
 Ceelka Biyo kulule oo ah goobta ugu caansan ee loo dalxiis tago soomaaliya ayaa kamida meelaha ugu muhiimsan deegaanka.
+
 ==Taariikhda Ceelka & Beeraha Biyo Kulule==
 Ceelka iyo beeraha Biyo kulule waa goobta dalxiis ee ugu magaca dheer dalk [[Soomaaliya]], waxaa Helay Nin la oran jiray ''Mataan''  oo kamid ahaa odayaashii iyo waxgaradkii deegaanka.  Ceelka biyo kulule ka hor intuusan noqon goob dalxiis wuxuu ahaa beero iyo deegaan qurux dabiiciya leh, waxaana u soo dabaal iyo jimicsi caafimaaf tegi jiray dadyowgii deegaanka ka agdhowaa iyo markii danbe Talyaanigii dalka yimi. Dabayaaqadii 1800 ayaa Talyaanigu bilaabay inuu goobtan u qaabeyo goob dalxii una gartay inay tahay caafimaadka iyo dalxiiskaba ku wanaagsan.
 Biyo kulule waxaa haatan aad ugu soo dalxiis iyo caafimaad doonta Soomali badan oo ka kala timaada gudaha iyo dibada dalka. Qaybo kamida ceelasha biyo kulule waa  kuwo hoos loogu dego oo aad ugu tegeysid jewi ka duwan kan caadiga ah, Inta badana ceelashaas waxaa loo isticmaalaa daaweynta cuduro badan oo kala duwan.
