/* Sidoo kale fiiri */Hhwhwh

--- a/Jijeele.mw
+++ b/Jijeele.mw
@@ -91,7 +91,7 @@ Hawiye (Af-Carabi: بنو هوية) waa beel ka mida qabiilada Soomaalida, kuwaa
 
 == Sidoo kale fiiri ==
 
-- [[Beelaha Soomaalida]]
+- [[Beelaha Somalia]]
 {{Navbox
 | name      = Beelaha Soomaalida
 | title     = [[Soomaali#Beelaha|Beelaha Soomaalida]]
@@ -174,7 +174,6 @@ Hawiye (Af-Carabi: بنو هوية) waa beel ka mida qabiilada Soomaalida, kuwaa
 
 [[Category:Macluumaadka Soomaaliya]]
 }}
-
 
 == Tixraac ==
 
