*Empty MediaWiki Message*

--- a/Garoosni.mw
+++ b/Garoosni.mw
@@ -1,4 +1,4 @@
-[[File:Grozny-City Towers Facade Clocks.jpg|500px|thumb| 1996]]
+[[File:Grozny-City Towers Facade Clocks.jpg|500px|thumb| Garoosni, Russka ]]
 '''Garoosni''' ([[AfRuushka]] Гро́зный]] Waa caasimada Jamhuuriyada Kamidka Ah jamhuuriyadaha [[Ruush]]ka ee looyaqaano [[Jeejniya]] waxaa ladhisay sandkii 1818 magaaldani waxa ay soomartay dagaalo iyo ishaysiyo aad ubadan oo uu u danbeeyaay kii dhexmaray ciidamada Ruushka iyo Gooni u goosadayaashii Jeeejniyiinta sandkii [[1996]] dagaalkaas oo magaalda gaadhsiiyaay burbur iyo Khasaare aad u balaadhan.
 
 [[Category:Ruushka]]
