*Empty MediaWiki Message*

--- a/2005_bangladesh_bamka.mw
+++ b/2005_bangladesh_bamka.mw
@@ -3,6 +3,6 @@
 
 2005 bangladesh bamka
 
-{{Flag:Bangladesh}}
+{{Flag|Bangladesh}}
 
 17kii Agoosto 2005, qiyaastii 500 oo qarax ah ayaa ka dhacay 300 goobood oo 63 ka mid ah 64 degmo oo ka tirsan Bangladesh. Bamamka ayaa qarxay mudo nus-saac ah laga bilaabo 11:30 subaxnimo. Hay'ad argagixiso, Jamaacul Mujaahidiinta Bangladesh (JMB) ayaa sheegatay mas'uuliyadda qaraxyada. Kooxdan, oo ay hoggaaminayaan Shaykh Abdur Rahman iyo Siddiqur Rahman (oo sidoo kale loo yaqaan Bangla Bhai), ayaa lagu eedeeyay inay xiriir la leeyihiin Al-Qaacida, inkastoo aan la xaqiijin. Koox kale oo argagaxiso ah, oo magaceeda lagu magacaabo Harkat-ul-Jihad al-Islami, ayaa lala xiriiriyay JMB sidii ay u fulin lahayd weerarka iskuduuban. Qaraxyadii ka dib, labada kooxoodba waxaa mamnuucay Dowladda Bangladesh.
