*Empty MediaWiki Message*

--- a/Shirkad_Uniglo.mw
+++ b/Shirkad_Uniglo.mw
@@ -1,8 +1,6 @@
 
-
- Shirkad Uniglo
+'''Shirkad Uniglo'''
  
-
 {{Flag|Japan}}
 
-[[File:UNIQLOEatonCenter.jpg|thumb|Uniqlo in Canada]]
+[[File:UNIQLOEatonCenter.jpg|thumb|500px|Uniqlo in Canada]]
