*Empty MediaWiki Message*

--- a/Shirkad_Uniglo.mw
+++ b/Shirkad_Uniglo.mw
@@ -3,4 +3,4 @@
  
 {{Flag|Japan}}
 
-[[File:UNIQLOEatonCenter.jpg|thumb|500px|Uniqlo in Canada]]
+[[File:UNIQLOEatonCenter.jpg|thumb|500px|Uniqlo shirkad kanada  ]
