--- a/HokBen.mw
+++ b/HokBen.mw
@@ -3,7 +3,7 @@ Hoka Hoka Bento
 
 
 
-[[File:Hoka Hoka Bento Sabang.jpg|thumb|right|270px|One of the Hoka Hoka Bento restaurants in Jalan Sabang, Jakarta]]
+[[File:Hoka Hoka Bento Sabang.jpg|thumb|right|270px|Jakarta]]
 
 
 
