*Empty MediaWiki Message*

--- a/Liiska_magaalooyinka_Soomaaliya.mw
+++ b/Liiska_magaalooyinka_Soomaaliya.mw
@@ -1,5 +1,11 @@
 Hoos waxaa ku xusan '''diwaanka [[caasimad]]aha iyo magaalooyinka ku yaala wadanka [[Soomaaliya]]'''.
 
+'''Liiska magaalooyinka Soomaaliya
+'''
+
+* {{Flag|Somalia}}
+* {{Flag|Somaliland}}
+
 
 *[[Aadan Yabaal]]
 *[[Afurur]]
