Removed redirect to [[Bahalada]]

--- a/Bahal.mw
+++ b/Bahal.mw
@@ -1,1 +1,23 @@
-#REDIRECT [[Bahalada]]
+[[File:Polar bear (Ursus maritimus) with its prey.jpg|thumb]]
+'''Bahal'''  ama bahalnimo waa [[Is dhexgalka bayoolajiga]], kaas oo ugaarsaduhu ku cunaayo ugaarta. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{gumud}}
+[[Category:Bahal]]
