/* Linkiyo kale */Buulo mareer,

--- a/Buulo_Mareer.mw
+++ b/Buulo_Mareer.mw
@@ -1,7 +1,7 @@
 {{Infobox settlement
 |official_name          =Bulo Marer
 |other_name             =buulo mareer
-|native_name            =  
+|native_name            =bulomarer 
 |nickname               = 
 |settlement_type        =Magaalo
 |motto                  =
@@ -18,7 +18,7 @@
 |pushpin_map            =Somalia
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
-|pushpin_map_caption    =Meesha kaga taalo Soomaaliya.
+|pushpin_map_caption    =Gobalka sh/hoose.
 |coordinates_display    =inline,title
 |coordinates_region     =SO-LS
 |subdivision_type       =Country
@@ -61,7 +61,9 @@
 }}
 '''Buulo Mareer''' ({{lang-en|''Bulo Marer''}}), sidoo kale loo qoro '''Buulomareer''', waa magaalo dhacda koonfurbari [[Shabeellaha Hoose]] ee wadanka [[Soomaaliya]].<ref>[http://www.usatoday.com/story/news/world/2013/01/12/french-soldier-killed-somalia-raid/1828495/ French soldier killed in raid to free hostage in Somalia], ''Associated Press'', January 12, 2013.</ref>
 
-Tuulada Buula mareer waxay ka tirsan tahay Degmada Kuntuwaareey Waxayna 125 KM u Jirtaa Magaalada Muqdisho Degmada Kuntuwaareeyna waxay u jirtaa 18km  Buulo Mareer waxay ku taallaa goob muhiim ah oo istiraatiiji ah,Buulomareer Waxay halbowlo utahay isku Xirka wadada dheer ee Kismaayo iyo Muqdisho. Waxay Buulo Mareer leedahay Dugsiyo waxbarasho balse waxaa ugu caansan laba dugsi oo kala ah: Dugsiga Hoose/Dhexe ee Buulo Mareer oo ka mid ah Dugsiyadii dadweynaha ee ay dhistay Dowladdii Kacaanka Dugsiga Hoose/Dhexe & Sareee ALFARUUQ waana dugsi ay gacanta ku heyso Hey’adda Direct Aid/Africa Muslims Agency. Sidoo kale waxa ay leedahay goobo caafimaad Sida: Isbitaalka Xayaat, MCH-yo iyo weliba goobo kale oo si gaar ah loo leeyahay. Buulo Mareer waxaa loo Qeybiyaa Labo Xaafadood. waxayna kala yihiin Bari iyo Oriso . Buulo Mareer waxaa dega beelaha Digil, Gaar ahaan Jiido iyo Murusade iyo beelo kale oo yar yar. Waana magaalo Bilic Qurxoon
+Tuulada Buula mareer waxay ka tirsan tahay Degmada Kuntuwaareey, in kastoo ay kaweyn tahay kuntunwaaray dhan da'da tirada dadka ku nool iyo wali ba baaxada deegaan keedu uu ku fadhiyo, waxa ay kamid tahay meelaha ay doowladii kacaan ka ay gacan bidixaysay. Waxayna 125 KM u Jirtaa Magaalada Muqdisho ee ah caasimada dalka, isidoo kale caasimada gobalka ee marka Waxay u Jirtaa 35 KM, Degmada ay katir santahay ee Kuntuwaareeyna waxay u jirtaa 18km.  Buulo Mareer waxay ku taallaa goob muhiim ah oo istiraatiiji ah,Buulomareer Waxay halbowlo utahay isku Xirka wadada dheer ee Kismaayo iyo Muqdisho. Waxay Buulo Mareer leedahay Dugsiyo waxbarasho balse waxaa ugu caansan laba dugsi oo kala ah: Dugsiga Hoose/Dhexe ee Buulo Mareer oo ka mid ah Dugsiyadii dadweynaha ee ay dhistay Dowladdii Kacaanka Dugsiga Hoose/Dhexe & Sareee ALFARUUQ waana dugsi ay gacanta ku heyso Hey’adda Direct Aid/Africa Muslims Agency. Sidoo kale waxa ay leedahay goobo caafimaad Sida: Isbitaalka Xayaat, MCH-yo iyo weliba goobo kale oo si gaar ah loo leeyahay. Buulo Mareer waxaa loo Qeybiyaa Labo Xaafadood. waxayna kala yihiin Bari iyo Oriso . Buulo Mareer waxaa dega beelaha Digil,hawiye iyo beelo kale oo yar yar. Waana magaalo Bilic Qurxoon
+Waxa uu dhaqaalaheeda ku tiir sanyahay beeraha, ganacsiga iyo xoolaha nool.
+
 
 =Linkiyo kale=
 * [http://buulomareer.com Buulomareer.com]
