Xasan shiiq cali wuxuu waxbadan kabadalay guud ahaan dhaq dhaqqaaqii magaalada  xaga wax barashada xaga canacsiga iyo horumarkaba sida is gaarsiinta

--- a/Cammaara.mw
+++ b/Cammaara.mw
@@ -11,7 +11,9 @@ kabaxa qudarta qeybaheeda kala duwan sida "Yaanyada,basasha,baradhada,mooska,cam
 *Ciideeda udugaa caafimaad weeyaane
 * Ceebna malahan qudaar nuuc walbaad ku cabireysaaye
 * Canbe moos iyo qare kaad beertana waad kacuneysaaye
-*Cajab weeye casirkii ceelaad qodaad biyo kala caraabee e
+*Cajab weeye casirkii ceelaad qodaad biyo kala caraabee e 
+*'''ganacsatada ugu waa weeyn''' 
+*xasan shiiq cali aada 
 
 == Qoraalka gudaha oo kooban ==
  [qari] 
