*Empty MediaWiki Message*

--- a/Cammaara.mw
+++ b/Cammaara.mw
@@ -34,8 +34,8 @@ Gudoomiyah Dagmada Camaara
 
 9  shiikh cabdi Amaar
 
- 
-     
+
+
    Gudoomiyaha dhalin yarada 
           Camaara
   ● Meecaad Axmed Salaad.
@@ -104,6 +104,8 @@ Caliyaalo
 
 5) Maxamed Aadan (shiilaale)
 
+6) shiiq cali aada  culusow
+
 ●Nabadoonada hadda ee Degmada Camaara
 
 1) Xuseen Diiriye (Bayr)
@@ -113,7 +115,7 @@ Caliyaalo
 3) Aadan maxamed cilmi(xarawo)
 
 4)  cabdinuur cilmi guco (luudi)
-==== ====
+==== 5) xasan shiiq cali aadan====
 {| class="infobox geography vcard"
 !Country
 |somalia
