Updated some info

--- a/Somaliaaaa.mw
+++ b/Somaliaaaa.mw
@@ -22,7 +22,7 @@
 | demonym                    = [[Dadka Soomaalida|Soomaali]]<ref name="factbook"/>
 | government_type            = [[Federation|Federaal]] [[Barlamaanka Jamhuuriyadda]]
 | leader_title1              = [[Madaxwaynaha Soomaaliya|Madaxweynaha]]
-| leader_name1               = [[Maxamed Cabdulaahi Maxamed]]
+| leader_name1               = [[Bishaar mohamuud abdi]]
 | leader_title2              = [[Ra'iisul wasaarayaashii Soomaaliya|Raiisul wasaaraha]]
 | leader_name2               = [[Xasan Cali Khayre]]
 | legislature                = [[Baarlamaanka Dowlada Fadaraalka||Barlamaanka Federaalka]]
