--- a/Shibis.mw
+++ b/Shibis.mw
@@ -101,6 +101,7 @@ Degmada shibis dhanka bari waxaa ka xigo degmada kaaraan, dhanka waqooyi yaaqshi
 * Guriga Barurey
 * biibitada waxnool
 * guriga reer maano xamzo
+* Guriga Reer Sheekh  Ismail  Anshur 
 * Guriga reer jeele olow
 * Shaxshaxloow
 masaaajidka al hudda 
