*Empty MediaWiki Message*

--- a/Dhurde.mw
+++ b/Dhurde.mw
@@ -3,7 +3,7 @@
 == '''Surta''' ==
 Surta ayaan laga aqoon malabka balse aad bay uga yartahay wxuuna ku sameeyaa geeduhu meelaha ay dulduleelada ku leeyihiin waxana ka mida dhirta uu ku sameeyo xagarka, kunrada iyo qaroonka ama dhamaan dhirta geed quwaaxa loo yaqaan.
 
-Marka aad jabsato surta ama dhuunyaalaha baxanaa wuxuu u qaybsan yahay saddex qaybood; Malab miida oo midabka madowga leh, malab aan weli bilaan ama gaws midabka jaalaha ama hurdiga leh iyo qaybta saddexaad oo ah dhalaanka dhurdaha, badanaa dadka goosta surta ma waxyeeleeyaan dhalaanka oo waa dhawraan dadka qaarkiina wey cunaan ogaal la'aan ay malabka qayb kamida moodaan.
+Marka aad jabsato surta ama dhuunyaalaha badanaa wuxuu u qaybsan yahay saddex qaybood; Malab miida oo midabka madowga leh, malab aan weli bislaan ama gaws midabka jaalaha ama hurdiga leh iyo qaybta saddexaad oo ah dhalaanka dhurdaha, badanaa dadka goosta surta ma waxyeeleeyaan dhalaanka oo waa dhawraan dadka qaarkiina wey cunaan ogaal la'aan ay malabka qayb kamida moodaan.
 [[File:Bombyliidae_3_by_kadavoor.jpg|right|thumb|307x307px|Dhurduhu wuxuu macaanka ka helaa ubaxa sida shinnidu samayso.]]
 
 == Soomaalidu maxay ka tiri ==
