*Empty MediaWiki Message*

--- a/Dhurde.mw
+++ b/Dhurde.mw
@@ -1,5 +1,7 @@
 [[File:Grosser Wollschweber Bombylius major.jpg|thumb|Grosser Wollschweber Bombylius major]]'''Dhurde''' ama '''Dhuunyaale''' ({{lang-en|Bombyliidae}})  waa Waa duqsi yaryar oo dheecaan aan u macaan oo malabkoo kale ah sameeya, aanse u badneyn sida kan shinnida, waxaana loo yaqaanaa Sur.
 
+Waxa uu caan ku yahay dhuun dheer oo jaale madow xigeen ah oo uu ka taago daldaloolka dhirta oo ah aqalka rasmiga ah oo deggan yahay. 
+
 == '''Surta''' ==
 Surta ayaan laga aqoon malabka balse aad bay uga yartahay wxuuna ku sameeyaa geeduhu meelaha ay dulduleelada ku leeyihiin waxana ka mida dhirta uu ku sameeyo xagarka, kunrada iyo qaroonka ama dhamaan dhirta geed quwaaxa loo yaqaan.
 
