--- a/Mooracase.mw
+++ b/Mooracase.mw
@@ -9,7 +9,7 @@
 |rels = [[Islam| Islam Sunni]]
 |related-c = [[Reer Darawiish]], [[Majeerteen]], [[Meheri]], [[Warsangali]], [[Ogaadeen]], [[Yemen|Yemeni]] iyo reero kale oo [[Daarood]] ah.}} 
 '''Mooracase''' ({{lang-en|''Morase''}}, {{lang-ar| مورأاسي }}), ''Ahmed Harti Amaleh Abdi Muhammad Abdirahman Jaberti''; sidoo kale loo qoro '''Moorasse''', '''Moor'ase''', '''Mourase''' waa [[Beelaha Soomaalida|qabiil]] ka tirsan beelaha [[Daarood]]ka ee [[Soomaali|Dadka Soomaalida]]. kuwaasi oo deegaan ku ah wadamadda [[Soomaaliya]], [[Cumaan]] iyo [[Yemen]].
-Beelweynta Mooracase waxaa ka farcama dhamaan qabiilada Axmed Hartiga ee kala ah: [[Gabtaanle]], [[Tiinle]], [[Maganlabe]], Iyo [[Dishiishe]].<ref>http://allsbc.com/guddiga-qaban-qaabada-shirweynaha-beesha-axmed-harti-ee-uk-oo-london-kulan-ku-yeeshay/</ref>
+Beelweynta Mooracase waxaa ka farcama dhamaan qabiilada Axmed Hartiga ee kala ah: [[Gabtaanle]], [[Tiinle]], [[Maganlabe]], Iyo [[Dishiishe]].<ref>http://allsbc.com/guddiga-qaban-qaabada-shirweynaha-beesha-axmed-harti-ee-uk-oo-london-kulan-ku-yeeshay/</ref><ref>http://www.biyokulule.com/taxataranMooro.htm</ref>
 
 ==Daarood==
 Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] (gobolada dhexe iyo [[Gedo]]), wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
