*Empty MediaWiki Message*

--- a/Template:Beelaha_Soomaalida.mw
+++ b/Template:Beelaha_Soomaalida.mw
@@ -11,7 +11,7 @@
 *[[Dhulbahante]]
 *[[Majeerteen]]
 *[[facaye]]
-*[[Dishiishe|Dashiishe]]
+*[[Dishiishe]]
 *[[Warsangali]]
 *[[Lailkase]]
 *[[Ortoble]]
