*Empty MediaWiki Message*

--- a/Template:Beelaha_Soomaalida.mw
+++ b/Template:Beelaha_Soomaalida.mw
@@ -10,11 +10,11 @@
 *[[Ogaadeen (beel)|Ogaadeen]]
 *[[Dhulbahante]]
 *[[Majeerteen]]
-*[[facaye]]
 *[[Dishiishe]]
 *[[Warsangali]]
 *[[Lailkase]]
 *[[Ortoble]]
+*[[Facaaye]]
 *[[kaskiqabe]]
 *[[galameysi]]
 
