--- a/Liiska_xisbiyada_siyaasadeed.mw
+++ b/Liiska_xisbiyada_siyaasadeed.mw
@@ -16,6 +16,7 @@
 * [[Xisbiga Caddaaladda iyo Horumarka (Turkiga)]]
 * [[ANDP]]
 * [[Tayo]]
+* [[Logo der Freien Demokraten]]
 * [[Union for Peru]]
 * [[Nation's Future Party]]
 * [[All Progressives Congress]]
