*Empty MediaWiki Message*

--- a/Liiska_xisbiyada_siyaasadeed.mw
+++ b/Liiska_xisbiyada_siyaasadeed.mw
@@ -16,7 +16,7 @@
 * [[Xisbiga Caddaaladda iyo Horumarka (Turkiga)]]
 * [[ANDP]]
 * [[Tayo]]
-* [[Logo der Freien Demokraten]]
+* [[Freien Demokraten]]
 * [[Union for Peru]]
 * [[Nation's Future Party]]
 * [[All Progressives Congress]]
