*Empty MediaWiki Message*

--- a/Calanka_Jabuuti.mw
+++ b/Calanka_Jabuuti.mw
@@ -1,4 +1,4 @@
-[[File:Flag_of_Djibouti.svg‎|thumb|calanka jabuuti]]
+[[File:Flag_of_Djibouti.svg‎|thumb|500px|calanka jabuuti]]
 
 '''Calanka jamhuuriyada jabuuti''' waxa uu kakoobanyahay afar [[midab]] xaga sare waa buluug dhanka hoosane waa [[cagaar]] waxa baasha bidix ka saaaran kahad [[cad]] oo sadex geesood u samaysan oo ay ku dhexjirto xidig cas waxa markii u horaysay la isticmaalay maalintii [[jabuuti]] ay heshay madax banaanideeda 27-06-1977 
 
