*Empty MediaWiki Message*

--- a/Dodoma.mw
+++ b/Dodoma.mw
@@ -11,7 +11,7 @@
 <!-- images and maps  ----------->
 
 |image_skyline          = Dodoma, Tanzania.JPG
-|imagesize              = 
+|imagesize              = 400px
 |image_caption          = 
 |image_flag             =
 |flag_size              =
