*Empty MediaWiki Message*

--- a/Liisaska_dalalka_leh_credit_rating.mw
+++ b/Liisaska_dalalka_leh_credit_rating.mw
@@ -37,7 +37,7 @@ Tani waa liiska wadamada leh credit rating, oo muujinaya darajada dulsaar la'aan
 [[File:Notation financière des Etats européens par Fitch Ratings.svg|thumb|600px|Financial ratings of European States by Fitch Ratings on 16 August 2014]]
 {| class="sortable wikitable"
 |- style="background:#ececec;"
-! Country !! Rating !! Outlook !! Date !! Ref.
+! Waddanamaha!! Rating Tiroka !! Outlook !! Date !! Ref.
 |-
 | {{flag|Abu Dhabi}} || <span style="display:none;">191</span>AA || Stable || 2011-11-21 || <ref name="fitch">{{cite web|url=https://www.fitchratings.com/site/pr/1031843|title=Fitch Downgrades Venezuela's Long-Term Foreign Currency IDR to 'C'|last=|first=|date=3 November 2017|website=fitcratings.com|accessdate=2017-11-05}}</ref>
 |-
