*Empty MediaWiki Message*

--- a/Salool.mw
+++ b/Salool.mw
@@ -1,4 +1,4 @@
-{{taxobox
+{{salool
 | image            = Popcorn - Studio - 2011.jpg
 | image_caption    = Galley dubnayn
 | image2           = Popcorn.jpg
