--- a/Bangiga.mw
+++ b/Bangiga.mw
@@ -1,3 +1,1 @@
-'''Bangiga''' wa meel [[lacag]]ta lugu kaydi karo ama lagu qaadan karo amaah iyo deymid.
-
-[[Category:Lacagta]]
+#REDIRECT [[Banki]]
