*Empty MediaWiki Message*

--- a/Dekatul_Raxmaan.mw
+++ b/Dekatul_Raxmaan.mw
@@ -1,7 +1,7 @@
 {{Infobox port
 | name = Deketul Raxmaan </br>Natural Harbour
-| image =[[File:Dekatul-Raxmaan-Bacaad Bari.jpg|thumb|Dektaul Raxmaan, Ba'ad, Bari Somalia.]]
-| imagesize = 1720px
+| image =[[File:Dekatul-Raxmaan-Bacaad Bari.jpg|600px|thumb|Dektaul Raxmaan, Ba'ad, Bari Somalia.]]
+| imagesize = 720px
 | caption = 
 | country = {{flag|Somalia}}
 | location = [[Bacaad]], [[Bari]], [[Soomaaliya]]
