*Empty MediaWiki Message*

--- a/Gegada_Diyaaradaha_Cigaal.mw
+++ b/Gegada_Diyaaradaha_Cigaal.mw
@@ -17,7 +17,7 @@
 | longs = 20 
 | longEW = E
 | name         = Madaarka Caalamiga ah ee Cigaal
-| image        = Hargeisa airport.jpg
+| image        = [[File:Hargeisa airport.jpg|500px|thumb|right|]]
 | IATA         = HGA
 | ICAO         = HCMH
 | type         = Dadweynaha
