*Empty MediaWiki Message*

--- a/Gegada_Diyaaradaha_Cigaal.mw
+++ b/Gegada_Diyaaradaha_Cigaal.mw
@@ -24,7 +24,7 @@
 | owner        = Somaliland Civil Aviation Authority
 | operator     = 
 | city-served  = [[Hargeysa]], [[Somaliland]]
-| elevation-f  = 4,423
+| elevation-f  = 
 | website      = 
 | latd  =  09 
 | pushpin_map            = Somalia
