--- a/Gegada_Diyaaradaha_Cigaal.mw
+++ b/Gegada_Diyaaradaha_Cigaal.mw
@@ -36,7 +36,7 @@
 }}
 [[File:FlyDubai Airline at Hargeisa Airport.jpg||500px|thumb|A [[Flydubai]] [[Boeing 737 Next Generation|Boeing 737-800]]]]
 [[File:Hargeisa airport.jpg|500px|thumb|Garoonka Caalamiga ah ee Egal International]]
-
+{{Flag|Somaliland}}
 
 '''Madaarka Caalmiga ah ee Cigaal''' ({{lang-ar|مطار هرجيسا إيغال الدولية}}) waa garoonka diyaaradaha ku taal hawdka caasimada [[Somaliland|Jamhuuriyada Soomaliland]] ee  [[Hargeysa]].
 waa garoonka diyaaradaha ee magaalada Hargeysa, caasimadda Somaliland, caalamku wuxuu aqoonsan yahay Jamhuuriyad iskeed isku magacawday. waxay ka shaqeyneysay 56,000 oo rakaab iyo 2,300 ton oo xamuul ah oo isugu jira 1,750 oo dhul ah.<ref>{{Cite web|url=|title=|work=|date=}}</ref>
