*Empty MediaWiki Message*

--- a/Ciraaqi_Diinaar.mw
+++ b/Ciraaqi_Diinaar.mw
@@ -1,7 +1,7 @@
 
 {{Infobox currency
 | currency_name_in_local ={{native name|ar|دينار عراقي|italics=no}}<br>{{native name|ku|دیناری عێراقی|italics=no}}
-| image_1 = Dinar-25000.jpg
+| image_1 = [[File:Dinar-25000.jpg|thumb|right|400px|]]
 | image_title_1 = 25,000-dinar banknote
 | iso_code = IQD
 | using_countries = {{flag|Iraq}}
