*Empty MediaWiki Message*

--- a/Aanaaneh.mw
+++ b/Aanaaneh.mw
@@ -1,4 +1,4 @@
-[[File:Northeast somalia geography.png|thumb|Dhulka Aanaaneh]]
+[[File:Northeast somalia geography.png|thumb|500px|Dhulka Aanaaneh]]
 '''Aanaaneh''' waa dhul gunburaha leh oo bartamaha [[Sanaag]] ku yaal, ee la wadaagta degmada [[Fuqufuliye]]. Anaaneh waxaa hoos yimaada Karaman, iyo Dambaba, iyo Burweiso, iyo Karindag, iyo Dabaro, iyo Hagradin, iyo Bur-anod, iyo Sarate.
 
 {{gumud}}
