*Empty MediaWiki Message*

--- a/Maxamed_gorgaate.mw
+++ b/Maxamed_gorgaate.mw
@@ -1,1 +1,1 @@
-maxamed Gorgaate Waa curadka Gorgaate hawiye oo eey ku abtir sadaan beelo badan oo caan ah oo eey ka Mid yahiin silcis Gorgaate, wada laan Gorgaate, iyo dame Gorgaate , oo eey ku abtir sadaan Beelaha Hiraab sida Ujeejen, habar gidir, , xawaadle, Duduble , moobalen, Hilibi dalandole, wacdaan, iyo Abgaal
+maxamed Gorgaate Waa curadka Gorgaate hawiye oo eey ku abtir sadaan beelo badan oo caan ah oo eey ka Mid yahiin silcis Gorgaate, wada laan Gorgaate, iyo dame Gorgaate , oo eey ku abtir sadaan Beelaha Hiraab sida Ujeejen, habar gidir, , xawaadle, Duduble , moobalen, Hilibi dalandole, wacdaan, iyo Abgaal eedadii cune
