--- a/Ceelafweyn.mw
+++ b/Ceelafweyn.mw
@@ -77,7 +77,7 @@ Sida ay sheegeen odayaasha wax garadka ah ee degaanka oo qaarna nool yihiin qaar
 === Taariikhda degmada Ceelafweyn ===
 
 Taariikhda Dagmada Ceel-Afweyn
-Ceel-Afweyn waxay ku taala koonfurta galbaad ee Ceerigaabo. Waxay dhacdaa lat.9.55 long.47.15 .Waxay leedahay xeeb, buuraha Golis iyo banaano xoola daaqeen ah. Waxay caan ku tahay faleenka ,sida beeyada iyo malmalka. Dhulka buuraha leh waxaa jira togog durdur ah oo laga beero khudaarta oo kala duwan .Degaanka buuraleyda Guban waxaa laga helaa Dhuxul- dhagaxda oo aan weli si wacan looga faa-iidaysan iyo xabag god oo sanadahan dambe aad loola soo baxo ganacsi weyna leh. Xoolaha nool iyo ugaadha ayay degmadu hodan ku tahay. 
+Ceel-Afweyn waxay ku taala koonfurta galbaad ee [[Ceerigaabo]]. Waxay dhacdaa lat.9.55 long.47.15 .Waxay leedahay xeeb, buuraha Golis iyo banaano xoola daaqeen ah. Waxay caan ku tahay faleenka ,sida beeyada iyo malmalka. Dhulka buuraha leh waxaa jira togog durdur ah oo laga beero khudaarta oo kala duwan .Degaanka buuraleyda Guban waxaa laga helaa Dhuxul- dhagaxda oo aan weli si wacan looga faa-iidaysan iyo xabag god oo sanadahan dambe aad loola soo baxo ganacsi weyna leh. Xoolaha nool iyo ugaadha ayay degmadu hodan ku tahay. 
 Ceel-Afweyn waxay hodan ku tahay : ( prehistoric artefacts including rock paintings and engravings of various styles and ages as well as many stone cairns , tumuli and other prehistoric structures.(eg.Cllark,1954,Lewis 1961) Maduno ,Godhardhane ,God-Anod are some of these sites. The rock shelter has been investigated by a number of researchers (Jonson,1983, Brandt and Brook 1984,Brandt and Carder, 1987) The vast majority of these paintings depict long-horned, humpless bovines, short-horned cows ,goats ,human figures and what possibly represent bow and arrow. a dog and sheep. 
 Sida ay sheegeen odayaasha wax garadka ah ee degaanka oo qaarna nool yihiin qaarna xijaabteen waxaa magaalada Ceel-Afweyn la aasaasay sanadka la odhan jirey Hawa- rida oo ku beegnaa 1936. Waxaa dhismihii u horeeyey meesha magaaladu hadda tahay taagey Moxamed Muuse Moxamed ( Moxamed Dheere ) oo Headman ka ahaa ilaa uu ka xijaabtey 9/2/1951, Waxaa nool ragii sarabkii u horeeyey u soo guray.Waxaa dabadeed headman looga dhigay Cali Muuse Cigaal,wax yar ka dibna Axmed Jaamac Faarax oo Inbadan ahaa Headman ka magaalada.
 Hase ahaatee 1919 oo loo yiqiin sanadkii Dayuuradda ayaa ceelka magaalada oo la baxay Ceel-Afweyn
