--- a/İstanbul_Başakşehir.mw
+++ b/İstanbul_Başakşehir.mw
@@ -1,1 +1,49 @@
-İstanbul Başakşehir, waa koox banooni oo ka dhisan dalka Turkiga.
+{{Distinguish|İstanbul Büyükşehir Belediyesi S.K.}}
+{{Infobox football club
+|clubname            = İstanbul Başakşehir
+|image               = İstanbul Başakşehir logo.svg
+|image_size    = 160px
+|fullname            = İstanbul Başakşehir Futbol Kulübü
+|short name          = 
+|nickname            = 
+|founded             = {{Start date and years ago|df=yes|1990}} <br><small>as İstanbul Büyükşehir Belediyespor</small><br>{{Start date and years ago|df=yes|2014|6|5}} <br><small>as İstanbul Başakşehir Futbol Kulübü</small>
+|ground              = [[Başakşehir Fatih Terim Stadium|Fatih Terim Stadium]]
+|capacity            = 17,156<ref>{{cite web|url=http://www.ibfk.com.tr/tesislerimiz/|title=3. İSTANBUL FATİH TERİM STADYUMU|language=Turkish|date=10 May 2017|accessdate=10 May 2017|publisher=ibfk.com.tr}}</ref><ref>{{cite web|url=http://www.tff.org/Default.aspx?pageId=28&kulupID=3665|title=MEDİPOL BAŞAKŞEHİR FK|language=Turkish|date=10 May 2017|accessdate=10 May 2017|publisher=tff.org}}</ref>
+|president           = 
+|chairman            = [[:tr:Göksel Gümüşdağ|Göksel Gümüşdağ]]
+|manager             = [[Okan Buruk]]
+| league             = {{Turkish football updater|İstanbul Başakşehir}}
+| season             = {{Turkish football updater|İstanbul Başakşehir2}}
+| position           = {{Turkish football updater|İstanbul Başakşehir3}}
+|website             = http://www.ibfk.com.tr/
+|current             = 2019–20 İstanbul Başakşehir F.K. season
+|pattern_la1  = _istanbul1920h
+|pattern_b1   = _istanbul1920h
+|pattern_ra1  = _istanbul1920h
+|pattern_sh1  = _istanbul1920h
+|pattern_so1  = _istanbul1920h
+|leftarm1     = FF6600
+|body1        = FF6600
+|rightarm1    = FF6600
+|shorts1      = 0B1444
+|socks1       = FF6600
+|pattern_la2  = _istanbul1920a
+|pattern_b2   = _istanbul1920a
+|pattern_ra2  = _istanbul1920a
+|pattern_sh2  = _istanbul1920a
+|leftarm2     = 0B1444
+|body2        = 0B1444
+|rightarm2    = 0B1444
+|shorts2      = FF6600
+|socks2       = 0B1444
+|pattern_la3  = _istanbul1920t
+|pattern_b3   = _istanbul1920t
+|pattern_ra3  = _istanbul1920t
+|pattern_sh3  = _istanbul1920t
+|leftarm3     = A9E2F3
+|body3        = A9E2F3
+|rightarm3    = A9E2F3
+|shorts3      = FFFFFF
+|socks3       = FFFFFF
+}}
+'''İstanbul Başakşehir''', waa koox banooni oo ka dhisan dalka Turkiga.
