*Empty MediaWiki Message*

--- a/İstanbul_Başakşehir.mw
+++ b/İstanbul_Başakşehir.mw
@@ -46,5 +46,5 @@
 |shorts3      = FFFFFF
 |socks3       = FFFFFF
 }}
-'''İstanbul Başakşehir''', waa koox banooni oo ka dhisan dalka Turkiga.
+'''İstanbul Başakşehir F.K.''', Waa koox-banooni oo ka dhisan caasimadda [[Istanbul]] ee dalka [[Turkiga]]. Kooxdani waxaa la aasaasay sanadku markuu ahaa 1990kii, waxayna ka mid tahay shanta kooxood ee ugu waaweyn guud ahaan dalkaasi, İstanbul Başakşehir waa horyaalka kubadda cagta dalka Turkiga ee xili ciyaareedka 2019-20.
 ==Tixraac==
