*Empty MediaWiki Message*

--- a/Saldanadii_Cal_Miskaad.mw
+++ b/Saldanadii_Cal_Miskaad.mw
@@ -1,16 +1,16 @@
 {{Infobox Former Country
-|native_name            = Suldanadii Cal Miskaad <br /><br /> {{lang|ar|سلطنة المسكاد }}
-|conventional_long_name = Suldanaddii Dishiishe
-|common_name            = Cal Miskaad Sultanate
+|native_name            = Suldanadda Cal Miskaad <br />𐒈𐒚𐒐𐒆𐒖𐒒𐒖𐒆𐒆𐒖 𐒔𐒙𐒁𐒕𐒙<br /> {{lang|ar|سلطنة المسكاد }}
+|conventional_long_name = Suldanadda Dishiishe
+|common_name            = Sultanate of Cal Miskaad
 |continent              = Afrika
 |region                 = Geeska Afrika
-|status                 = [[Soomaali]]<br />Maamulkii Boosaaso<br />
+|status                 = [[Soomaali]]<br />Suldanadii Dishiishe (1886–1922)
 |country                = Soomaaliya
-|year_start             = 1877
-|year_end               = 1925
+|year_start             = 1886
+|year_end               = 1922
 |p1                     = 
 |flag_p1                = 
-|s1                     = 
+|s1                     = Italian Somaliland
 |flag_s1                = 
 |date_start             = 
 |date_end               = 
@@ -27,11 +27,11 @@
 |capital                = [[Boosaaso]]
 |common_languages       = [[Af-Soomaali]]{{·}}[[Af Carabi]]
 |government_type        = [[Ugaastooyo]]
-|leader1                = [[Cali Gurey
-|year_leader1           = 1887-1922
+|leader1                = Cali Gurey
+|year_leader1           = 1886-1922
 |leader2                = 
 |year_leader2           = 
-|title_leader           = Ugaas
+|title_leader           = [[Ugaas]]
 |leader3                = 
 |year_leader3           = 
 |legislature            =
@@ -45,8 +45,7 @@
 }}
 
 '''Saldanadda Boosaaso''' ({{lang-so|''Sultanate of Bosaso''}}, {{lang-ar| سلطنة المسكاد}}), sidoo kale loo yaqaanay '''Saldanadii Boosaaso''',<ref name="">http://www.somalitalk.com/2008/sept/10sep1808.html</ref> waxay ahayd Ugaastooyo [[Soomaali]] qarnigii 19aad ilaa qarnigii 20aad ka jirtey deegaanada galbeedka gobolka Bari, iyadoo markii dame awoodeedu ki fiday qaybo ka mid ah gobolka Sanaag.
-Waxaa aasaasey 1877-dii nin la odhan jirey Ugaas [[Cali Gurey]] oo ahaa dagaalyahan iyo gabyaa dhowr jeer dagaal la galay gumaystihii Talyaaniga. 
-
+Waxaa aasaasey 1877-dii nin la odhan jirey Ugaas [[Cali Gurey]] oo ahaa dagaalyahan iyo gabyaa dhowr jeer dagaal la galay gumaystihii Talyaaniga.
 
 ==Sidoo kale fiiri==
 *[[Saldanadii Cadal]]
