--- a/Saldanadii_Cal_Miskaad.mw
+++ b/Saldanadii_Cal_Miskaad.mw
@@ -44,7 +44,7 @@
 |today                  = {{flag|Somalia}}
 }}
 
-'''Saldanadda Boosaaso''' ({{lang-so|''Sultanate of Bosaso''}}, {{lang-ar| سلطنة المسكاد}}), sidoo kale loo yaqaanay '''Saldanadii Boosaaso''',<ref name="">http://www.somalitalk.com/2008/sept/10sep1808.html</ref> waxay ahayd Ugaastooyo [[Soomaali]] qarnigii 19aad ilaa qarnigii 20aad ka jirtey deegaanada galbeedka gobolka Bari, iyadoo markii dame awoodeedu ki fiday qaybo ka mid ah gobolka Sanaag.
+'''Saldanadda Cal Miskaad''' ({{lang-so|''Sultanate of Cal Miskaad''}}, {{lang-ar| سلطنة المسكاد}}), sidoo kale loo yaqaanay '''Saldanadii Boosaaso''',<ref name="">http://www.somalitalk.com/2008/sept/10sep1808.html</ref> waxay ahayd Ugaastooyo [[Soomaali]] qarnigii 19aad ilaa qarnigii 20aad ka jirtey deegaanada galbeedka gobolka Bari, iyadoo markii dame awoodeedu ki fiday qaybo ka mid ah gobolka Sanaag.
 Waxaa aasaasey 1877-dii nin la odhan jirey Ugaas [[Cali Gurey]] oo ahaa dagaalyahan iyo gabyaa dhowr jeer dagaal la galay gumaystihii Talyaaniga.
 
 ==Sidoo kale fiiri==
