*Empty MediaWiki Message*

--- a/Wadada_Preah_Sisowath_Phnom_Penh_Kambodia,.mw
+++ b/Wadada_Preah_Sisowath_Phnom_Penh_Kambodia,.mw
@@ -10,3 +10,64 @@
 * Hotelka IndoShiniaha
 * Souk Pepper tree
 * Souk Three strands
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+==Sido kale fiiri==
+
+* [[Wadada Jidka Warshaddaha Moqadishu Somalia]]
+* [[Wadada Rd Number 1 Somaliland]]
