*Empty MediaWiki Message*

--- a/Wadada_Beyoğlu_Turkiga.mw
+++ b/Wadada_Beyoğlu_Turkiga.mw
@@ -166,6 +166,7 @@ Degmadu waxay ka kooban tahay xaafado kale oo ku yaalla Woqooyiga Geeska Afrika,
 ==sido kale fiiri==
 *[[Wadada - Al Maktoum Rd Dubay]]
 *[[Wadada Rd Number 1 Somaliland]]
+*[[Jassirada Gezira, Masar]]
 *[[Waddada Fudanotsuji, Kyoto,Jabaan]]
 *[[Wadada Route de L aeroport Djabuti]]
 *[[Wadada Sderot Rothschild, Israel]]
