/* Sido kale fiiri */

--- a/Wadada_Rd_Number_1_Somaliland.mw
+++ b/Wadada_Rd_Number_1_Somaliland.mw
@@ -74,6 +74,7 @@ Resturants.
 *[[Wadada Av de La Marina, Lima , Peru]]
 *[[Wadada Beyoğlu Turkiga]]
 *[[Wenceslas Square Prague , Czech Republic]]
+*[[Jassirada Gezira, Masar]]
 *[[Wadada Champs Elysees Faransiiska]]
 *[[Waddada Fudanotsuji, Kyoto,Jabaan]]
 *[[Wadada King st , Melbourne Australia]]
