*Empty MediaWiki Message*

--- a/Wadada_Jalal_Ampang_Malaysia.mw
+++ b/Wadada_Jalal_Ampang_Malaysia.mw
@@ -64,6 +64,7 @@
 
 * [[wadada Rd Number 1 Somaliland]]
 * [[Wadada Beyoğlu Turkiga]]
+* [[Wadada Okobo Dori , Tokyo , Jabaan]]
 * [[Wadada Champs Elysees Faransiiska]]
 * [[Wadada Sderot Rothschild, Israel]]
 * [[Wadada Jidka Warshaddaha Moqadishu Somalia]]
