*Empty MediaWiki Message*

--- a/Liska_Gobolada_Itoobiya.mw
+++ b/Liska_Gobolada_Itoobiya.mw
@@ -53,7 +53,7 @@
 | 284,538 || 18,465,449 || 27,158,471 || 31,294,992
 |35,467,001
 |-
-|align="left"| [[Somali|Somali]] (ሶማሌ) ||align="left"| ''kilil''
+|align="left"| [[Somali (ሶማሌ) ||align="left"| ''kilil''
 |align="left"| [[Jigjiga]]
 | 279,252.00 ||  3,144,963 ||  4,439,147 ||  5,148,989
 |5,748,998
