--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -15,7 +15,7 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Somaliland
+|pushpin_map            =Somaliland ssc
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
 |pushpin_map_caption    =Halka ay dhacdo Somaliland
@@ -28,7 +28,7 @@
 |government_footnotes   =
 |government_type        ='''mayor'''
 |leader_title           ='''mayor'''
-|leader_name= '''Eng axmedqani Cabdi xaji yusuf''' 
+|leader_name= '''Eng cabdikariin cali shaakir''' 
 |established_title      =  
 |established_date       = 
 |area_magnitude         = 
