--- a/Adhicadeeye.mw
+++ b/Adhicadeeye.mw
@@ -1,8 +1,9 @@
-'''Adhiya cadeeye''' waa degaan ka tirsan gobolka [[Sool]] ee wadanka [[Somalia]]. Adhiya Cadeeye waxay dhacdaa 32 kilomitir waqooyiga magaalada [[Laascaanood]]. Sidoo kale, magaalada Adhi cadeeye bedkeedu waa 4km, waxaa horaantii la aasasay 1960 yadii waa deegaan aad udaweyn waxaana hoosyimaada tuulooyinka tuulo samakaab, canjiid, kalbardaalay.
+'''Adhiya cadeeye''' waa degaan ka tirsan gobolka [[Sool]] ee wadanka [[somaliland]]. Adhiya Cadeeye waxay dhacdaa 32 kilomitir waqooyiga magaalada [[Laascaanood]]. Sidoo kale, magaalada Adhi cadeeye bedkeedu waa 9km, waxaa horaantii la aasasay 1935 yadii waa deegaan aad udaweyn waxaana hoosyimaada tuulooyinka tuulo samakaab, canjiid, kalbardaalay.
 
 Degmada Adhicadeeye waa mid caan ku ah xoolaha gaar ahaan Geela adhiga iyo fardaha.
 
-Degaanka waxa ku dhaqan beelwaynta Fiqishini Habargidir ee Hawiye.
+Degaanka addhicadeeye waxaa ku dhaqan . Beelwaynta .
+Reer cilmi.naaleye axmed.ugaadhyahan.dhulbahante.
 
 ==Sidoo kale fiiri==
 *[[Liiska magaalooyinka Soomaaliya]]
