--- a/Adhicadeeye.mw
+++ b/Adhicadeeye.mw
@@ -5,8 +5,8 @@ Degmada Adhicadeeye waa mid caan ku ah xoolaha gaar ahaan Geela adhiga iyo farda
 Degaanka addhicadeeye waxaa ku dhaqan . Beelwaynta .
 Reer cilmi.naaleye axmed.ugaadhyahan.dhulbahante.
 
-==Sidoo kale fiiri==
-*[[Liiska magaalooyinka Soomaaliya]]
+Waxaa qoray cabdikariin cali shaakir
+
 ==Tixraac==
 {{reflist}}
 {{gumud}}
