--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -57,6 +57,7 @@
 |footnotes              = 
 |coordinates            = {{coord|9|55|0|N|47|15|0|E|region:SO-TO|display=inline,title}}
 }}
+Sanad 2016
 
 
 
