--- a/Adhicadeeye.mw
+++ b/Adhicadeeye.mw
@@ -5,7 +5,7 @@ Degmada Adhicadeeye waa mid caan ku ah xoolaha gaar ahaan Geela adhiga iyo farda
 Degaanka addhicadeeye waxaa ku dhaqan . Beelwaynta .
 Reer cilmi.naaleye axmed.ugaadhyahan.dhulbahante.
 
-Waxaa qoray cabdikariin cali shaakir
+Waxaa qoray cabdikariin cali shaakir 2015
 
 ==Tixraac==
 {{reflist}}
