Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/Ninculuslovewarsheekh|Ninculuslovewarsheekh]] ([[User talk:Ninculuslovewarsheekh|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:Ismail4all|Ismail4all]]

--- a/Saraar.mw
+++ b/Saraar.mw
@@ -1,3 +1,106 @@
+{{Infobox settlement
+|official_name          =Saraar
+|other_name             =صرآر
+|native_name            =sarar
+|nickname               =
+|settlement_type        =
+|motto                  =
+|image_skyline          =
+|imagesize              =
+|image_caption          =
+|image_flag             = 
+|flag_size              =
+|image_seal             = 
+|seal_size              =
+|image_map              = 
+|mapsize                = 
+|map_caption            = 
+|pushpin_map            =Somaliland 
+|pushpin_label_position =bottom
+|pushpin_mapsize        =
+|pushpin_map_caption    =Waa gobolka isku xidha [[Sanaag]], [[Sool]], [[Togdheer]].
+|coordinates_display    =inline,title
+|coordinates_region     =SL-SO 
+|subdivision_type       =Dalka
+|subdivision_name       ={{flag|Somaliland}}
+|subdivision_type1      =[[Gobolada Somaliland|Gobol]]
+|subdivision_name1      =
+|subdivision_type2      =[[Dolaad goboledka Somaliland|Gobol]]
+|subdivision_name2      =[[saraar|Saraar]]
+|government_footnotes   =
+|government_type        =
+|leader_title           =[[Badhasaabka]]
+|leader_name        = Ahmed mohamed hashi   
+|established_title      =  
+|established_date       = 
+|area_magnitude         = 
+|unit_pref              =Metric
+|area_footnotes         =
+|area_total_km2         =
+|Gdp                    =
+|area_land_km2          = 500
+|population_as_of       =
+|population_footnotes   =
+|population_note        =
+|population_total       =100.480
+|population_density_km2 =
+|timezone               =[[Saacadda Afrikada Bari|EAT]]
+|utc_offset             =+3
+|timezone_DST           =  
+|Saraar caynaba| GDP_PPP_per_capita = $7,425
+| GDP_PPP_per_capita_rank = 
+| GDP_nominal = 388 Million 
+| GDP_nominal_year = 2017
+| GDP_nominal_rank = 
+| GDP_nominal_per_capita = $7,550
+| |GDP_nominal_per_capita_rank = 
+|utc_offset_DST         = 
+|latd=8|latm=57|lats=24|latNS=N
+|longd=46|longm=24|longs=43|longEW=E
+|elevation_footnotes    = 
+|elevation_m            = 
+|postal_code_type       = 
+|postal_code            =
+|area_code              =+252
+|blank_name             =
+|blank_info             =
+|website                = 
+|footnotes              = 
+}}
+{{Gobolada Soomaaliland}}
+
+==qabilada degan==
+*[[Reeryoonis]] 
+*[[cali barre]]
+*[[reeriidle]]
+*[[cumarjibriil]] 
+*[[Solomadow]] 
+*[[Sacad yoonis]]
+
+Degmada '''Caynabo''' ayaa ah magalada 
+caasimada u ah Gobolka saraar waana magalada ugu weyn, gobolka waxa ku yala   Banka saraar oo aad u Qurux badan xilliga roobka iyo barwaaqada. Waa mid weyn dherer iyo Ballac intu legyahay  waa kii Faysal Cumar Mushteeg lahaa. " '''Tan iyo xalay waan soo soconnee, Saraari ma jidkii Siraad baa".''' Waxa loogu wanqalay Gobolka Saraar oo ay Caasimad u tahay Degmada Caynaba.
+
+Dadka ku nool waxa lagu qiyaasaa Gobolka Saraar ku dhawaad Boqol Kun. 50.000 waxa doorashada inay codeeyaan iska diiwaangaliyey 31-kun oo cod bixiye.wana gobolki ugu codka badna marka laga yimado 6da gobol ee waweyn. Waa gobol xoolo dhaqato, Beeralay, iyo Ganacsato.
+
+Waa ￼xaruntii Colkii Soocane ee Cumar Jibriil iyo [[reeryoonis]] ee uu Hoggaamiyaha ka ahaa [[Kite Fiqi]] Yuusuf ( Kite Fiqe) waa xarunt abwaankii iyo Abaanduulihii Geesiga ahaa [[Maxamuud Jaamac Nuux]] ( Maxamuud Daallin).
+
+Xagga Ganacsiga waxa ka soo ￼jeeda [[Cabdi cawed cali (indhadeero)]] iyo Qaasin Qodax oo ahaa xiddigo xoolahoodu ifiyey guud ahaan dhulka Soomaalida gaar ahaanna Soomaalilaan. 
+
+Xagga Diinta waxa ka soo jeeda [[Sheekh Cali Warsame]] oo ahaa Aasaasihii Al-itixaad qaybtii ￼ Soomaaliya.  
+
+Mar kale Saraar waa ￼gurigii Dhaqanka Beelaha Habrjeclo iyo xaruntii dhaqanka. '''Suldaan Cali Muuse''' ayaa ka soo jeeda. Xilka waxa maanta haya '''Suldaan Cabdillaahi Suldaan Cali.''' '''Chief Caaqilkii guud Reer Yoonis ama Cismaan Yoonis Cheif Caaqil Maxamuud Xasan Bidde.''' 
+
+Halgankii SNM waxa ka soo jeeda Mujaahid '''Aadan Tarabbi Jaamac (Tuug-Tarabbi)''' oo ahaa aasaasihii Guutada 7-aad ee SNM. Guutaale oo ahaa ninkii ugu horreeyey ee qori gaadhi saara. Cabdiraxmaan Maxamed Case oo ahaa Taliyihii Guuto koowaad snm 
+
+*Maxamuud Xaashi Cabdi oo ahaa garabkii siyaasadda SNM. 
+*Aadan Saxar, 
+*Xirsi Gaanni, 
+*Abaar Warsame, 
+*Maxamed yare, 
+*Mataanihii Alla Magan, Maxamed Cali Madoobe, Cawil Xaashi Cali-geri ( Cawil Maandhar),
+*Cheif Caaqil Cali Xirsi
+* Cismaan Maxamuud Jaamac (Dawiil) oo ahaa Oday dhaqameed Ruug cadaa ah oo Saraar iyo Soomaalilaanba wax weyn ka qabtay.
+
 =degmooyinka gobolka saraar=
 *[[caynaba]] xarun
 *[[Oog|Degmada Oog]]
